--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
     "manifest_version": 3,
     "name": "Todo-Addon",
-    "version": "0.14.0",
+    "version": "0.15.0",
     "description": "This is a description",
     "permissions": ["identity"],
     "host_permissions": [],
@@ -21,7 +21,8 @@
     "browser_specific_settings": {
         "gecko": {
             "id": "{dd608bbd-737f-49dc-a10c-9dc4e60fcdc2}",
-            "strict_min_version": "109.0"
+            "strict_min_version": "109.0",
+            "update_url": "./versions.json"
         }
     },
     "author": "Thomas Nardou"
