--- a/.github/workflows/build_and_deploy.yaml
+++ b/.github/workflows/build_and_deploy.yaml
@@ -29,7 +29,7 @@ jobs:
           FTP_USER: ${{ secrets.FTP_USER }}
           FTP_PASSWORD: ${{ secrets.FTP_PASSWORD }}
         run: |
-          lftp -e "set ftp:ssl-allow no; mirror -R -I versions.json /site/wwwroot/addon_todo/tnu; quit" -u $FTP_USER,$FTP_PASSWORD ftps://waws-prod-zrh-007.ftp.azurewebsites.windows.net/site/wwwroot
+          lftp -e "set ftp:ssl-allow no; mirror -R -I versions.json dir_versions /site/wwwroot/addon_todo/tnu; quit" -u $FTP_USER,$FTP_PASSWORD ftps://waws-prod-zrh-007.ftp.azurewebsites.windows.net/site/wwwroot
       - name: Deploy addon
         env: 
           FTP_HOST: ${{ secrets.FTP_HOST }}
