--- a/.github/workflows/build_and_deploy.yaml
+++ b/.github/workflows/build_and_deploy.yaml
@@ -1,28 +1,85 @@
-name: deploy and build addon todo
+name: semRelease
 
 on:
   push:
-    tags:
-      - 'v*.*.*'
-  
-jobs: 
-  build:
+    branches:
+      - main
+
+jobs:
+  semRelease:
     runs-on: ubuntu-latest
     steps: 
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
+        with: 
+          token: ${{ secrets.GIT_TOKEN }}
+      
+      - name: Setup git 
+        run: |
+          git config user.name "Github actions"
+          git config user.email "github.action@github.com"
+
+      - name: get latest tag 
+        run: |
+          git fetch --tags
+          last_tag=$(git describe --tags $(git rev-list --tags --max-count=1) 2>/dev/null || echo "v0.0.0") 
+          echo "LAST_TAG=$last_tag" >> $GITHUB_ENV
+      - name: analyze commits
+        run: |
+          COMMIT_MSG=$(git log -1 --pretty=%B)
+          VERSION_CLEANED=${LAST_TAG:1}
+
+          PATCH_PART=$(echo "$VERSION_CLEANED" | cut -d . -f 3)
+
+          MINOR_PART=$(echo "$VERSION_CLEANED" | cut -d . -f 2)
+
+          MAJOR_PART=$(echo "$VERSION_CLEANED" | cut -d . -f 1)
+
+          if [[ "$COMMIT_MSG" == *"fix"* ]]; then
+            PATCH_PART=$((PATCH_PART+1))
+          
+          elif [[ "$COMMIT_MSG" == *"feat"* ]]; then
+            MINOR_PART=$((MINOR_PART+1))
+            PATCH_PART=0
+          
+          elif [[ "$COMMIT_MSG" == *"breakingChange"* ]]; then
+            MAJOR_PART=$((MAJOR_PART+1))
+            MINOR_PART=0
+            PATCH_PART=0
+          fi
+
+          nv="v$MAJOR_PART.$MINOR_PART.$PATCH_PART"
+          echo "NEW_VERSION=$nv" >> $GITHUB_ENV
+      - name: Create new tag
+        run: |
+          if [[ "$NEW_VERSION" != "$LAST_TAG" ]]; then
+            git tag "$NEW_VERSION"
+            git push origin "$NEW_VERSION"
+          fi
+      - name: display new version
+        run: |
+          if [[ "$NEW_VERSION" != "$LAST_TAG" ]]; then
+            echo "New version is $NEW_VERSION"
+          else 
+            echo "Ce commit n’a pas conduit à un tag"
+          fi
+
       - name: Set up Node.js
         uses: actions/setup-node@v2
         with:
           node-version: '22.x'
+        if: ${{ env.NEW_VERSION != env.LAST_TAG }}
       - name: Install dependencies
         run: npm install
+        if: ${{ env.NEW_VERSION != env.LAST_TAG }}
       - name: install lftp
         run: sudo apt-get install lftp
+        if: ${{ env.NEW_VERSION != env.LAST_TAG }}
       - name: Run package
         env:
           AMO_JWT_ISSUER: ${{ secrets.AMO_JWT_ISSUER }}
           AMO_JWT_SECRET: ${{ secrets.AMO_JWT_SECRET }}
         run: npm run pack:ff
+        if: ${{ env.NEW_VERSION != env.LAST_TAG }}
       - name: Deploy versions file
         env: 
           FTP_HOST: ${{ secrets.FTP_HOST }}
@@ -30,6 +87,7 @@ jobs:
           FTP_PASSWORD: ${{ secrets.FTP_PASSWORD }}
         run: |
           lftp -e "set ftp:ssl-allow no; mirror -R -I versions.json dir_versions /site/wwwroot/addon_todo/tnu; quit" -u $FTP_USER,$FTP_PASSWORD ftps://waws-prod-zrh-007.ftp.azurewebsites.windows.net/site/wwwroot
+        if: ${{ env.NEW_VERSION != env.LAST_TAG }}
       - name: Deploy addon
         env: 
           FTP_HOST: ${{ secrets.FTP_HOST }}
@@ -37,3 +95,4 @@ jobs:
           FTP_PASSWORD: ${{ secrets.FTP_PASSWORD }}
         run: |
           lftp -e "set ftp:ssl-allow no; mirror -R -I *.xpi web-ext-artifacts /site/wwwroot/addon_todo/tnu; quit" -u $FTP_USER,$FTP_PASSWORD ftps://waws-prod-zrh-007.ftp.azurewebsites.windows.net/site/wwwroot
+        if: ${{ env.NEW_VERSION != env.LAST_TAG }}
